--- a/src/main/resources/templates/user-home.html
+++ b/src/main/resources/templates/user-home.html
@@ -1,98 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
-<div th:replace="~{fragments/heads :: head}"></div>
+<head th:fragment="head">
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>TestingEz</title>
+    <link
+            rel="icon"
+            type="image/x-icon"
+            href="/images/school.png"
+    />
+    <link rel="stylesheet" href="/css/reset.css"/>
+    <link rel="stylesheet" href="/css/typography.css"/>
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous"
+    />
+</head>
 <body class="font">
 <div class="d-flex flex-column vh-100 gap-5">
-    <div th:replace="~{fragments/headers :: header}"></div>
-
-    <main
-            class="container d-flex justify-content-center align-items-center flex-grow-1"
-    >
-        <div class="row gap-3 flex-fill">
-            <div class="col-sm-1 flex-fill align-self-center">
-                <form
-                        id="testEntranceForm"
-                        class="bg-secondary rounded shadow border border-black border-2 p-5 d-flex flex-column"
+    <header th:fragment="header" class="flex-shrink-0 border-bottom border-black shadow">
+        <nav class="navbar navbar-expand-lg bg-secondary">
+            <div class="container-fluid gap-1">
+                <a
+                        class="navbar-brand bg-light rounded shadow px-1 fs-5 border border-black border-2"
+                        th:href="@{/user/profile}"
                 >
-                    <div class="mb-3 flex-fill text-center">
-                        <label for="testCode" class="form-label fs-4 text-white"
-                        >Enter Test Code:</label
-                        >
-                        <input
-                                type="text"
-                                class="form-control border border-black fs-6"
-                                id="testCode"
-                                placeholder="e.g., r%s12#t^"
-                                required
-                        />
+                    <img
+                            src="/images/astronaut.png"
+                            alt="default-avatar"
+                            width="35"
+                            height="35"
+                            class="d-inline-block align-text-middle me-1"
+                    /><span sec:authentication="name"></span></a
+                >
+                <button
+                        class="navbar-toggler"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#navbarNavAltMarkup"
+                        aria-controls="navbarNavAltMarkup"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation"
+                >
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav justify-content-center gap-1 mt-3 mt-lg-0">
+                        <a
+                                class="nav-link text-center text-dark fs-5 link-light active"
+                                aria-current="page"
+                                th:href="@{/user/home}"
+                        >Home</a>
+                        <a
+                                class="nav-link text-center text-dark fs-5 link-light active"
+                                aria-current="page"
+                                th:href="@{/test/join}"
+                        >Join Test</a>
+                        <a
+                                class="nav-link text-center text-dark fs-5 link-light"
+                                th:href="@{/test/create}"
+                        >Create Test</a>
+                        <a class="nav-link text-center text-dark fs-5 link-light" href="#"
+                        >My Results</a>
+                        <a class="nav-link text-center text-dark fs-5 link-light" href="#"
+                        >My Tests</a>
+                        <a class="nav-link text-center text-warning fs-5 link-light"
+                           href="#"
+                           sec:authorize="hasRole('ROLE_ADMINISTRATOR')"
+                        >All Tests</a>
+                        <a class="nav-link text-center text-warning fs-5 link-light"
+                           href="#"
+                           sec:authorize="hasRole('ROLE_ADMINISTRATOR')"
+                        >All Users</a>
                     </div>
-                    <button
-                            type="submit"
-                            class="btn bg-light text-black border border-black border-2 shadow rounded fs-5"
-                    >
-                        join
-                    </button>
-                </form>
-            </div>
-            <div class="col-lg-1 flex-fill">
-                <div class="container">
-                    <div class="row">
-                        <div class="col">
-                            <div
-                                    class="d-flex flex-column gap-2 bg-secondary rounded shadow border border-black border-2 p-3 d-flex flex-column"
+                    <div class="navbar-nav ms-auto">
+                        <form
+                                class="text-center"
+                                method="post"
+                                th:action="@{/account/logout}">
+                            <button
+                                    class="bnt bg-light rounded shadow px-3 py-2 fs-5 text-center text-black mt-3 mt-lg-0 border border-black border-2"
+                                    type="submit"
                             >
-                                <h3 class="text-white text-center">Previous Results:</h3>
-                                <div
-                                        class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                                >
-                                    <div class="test-name">MAT #1</div>
-                                    <div class="test-name">24.05.24</div>
-                                    <div class="test-result">0/10</div>
-                                </div>
-                                <div
-                                        class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                                >
-                                    <div class="test-name">BEL #2</div>
-                                    <div class="test-name">21.05.24</div>
-                                    <div class="test-result">10/10</div>
-                                </div>
-                                <div
-                                        class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                                >
-                                    <div class="test-name">AE #3</div>
-                                    <div class="test-name">20.05.24</div>
-                                    <div class="test-result">3/10</div>
-                                </div>
-                                <div
-                                        class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                                >
-                                    <div class="test-name">AE #4</div>
-                                    <div class="test-name">19.05.24</div>
-                                    <div class="test-result">6/10</div>
-                                </div>
-                                <div
-                                        class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                                >
-                                    <div class="test-name">MAT #5</div>
-                                    <div class="test-name">18.05.24</div>
-                                    <div class="test-result">9/10</div>
-                                </div>
-                                <a
-                                        class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black border border-black border-2"
-                                        href="#"
-                                >show all</a
-                                >
-                            </div>
+                                Log out
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main class="container d-flex justify-content-center flex-grow-1">
+        <div class="row justify-content-around align-items-center flex-fill">
+            <div class="col-sm-10 col-md-6">
+                <div class="bg-secondary rounded shadow border border-2 border-black p-2 fs-5 text-white text-center overflow-auto">
+                    <h1>Test of the Day</h1>
+                    <div class="question">
+                        <p>1.In Greek mythology, who did Jocasta marry?</p>
+                        <div class="d-flex justify-content-center gap-2">
+                            <label for="q1">
+                                <input class="bg-light rounded shadow border border-2 border-black"
+                                       id="q1">
+                            </label>
+                            <span class="d-none">true answer</span>
+                        </div>
+                    </div>
+                    <div class="question">
+                        <p>1.In Greek mythology, who did Jocasta marry?</p>
+                        <div class="d-flex justify-content-center gap-2">
+                            <label for="q1">
+                                <input class="bg-light rounded shadow border border-2 border-black"
+                                       id="q1">
+                            </label>
+                            <span class="d-none">true answer</span>
+                        </div>
+                    </div>
+                    <div class="question">
+                        <p>1.In Greek mythology, who did Jocasta marry?</p>
+                        <div class="d-flex justify-content-center gap-2">
+                            <label for="q1">
+                                <input class="bg-light rounded shadow border border-2 border-black"
+                                       id="q1">
+                            </label>
+                            <button>Reveal</button>
+                        </div>
+                    </div>
+                    <div class="question">
+                        <p>1.In Greek mythology, who did Jocasta marry?</p>
+                        <div class="d-flex justify-content-center gap-2">
+                            <label for="q1">
+                                <input class="bg-light rounded shadow border border-2 border-black"
+                                       id="q1">
+                            </label>
+                            <span class="d-none">true answer</span>
+                        </div>
+                    </div>
+                    <div class="question">
+                        <p>1.In Greek mythology, who did Jocasta marry?</p>
+                        <div class="d-flex justify-content-center gap-2">
+                            <label for="q1">
+                                <input class="bg-light rounded shadow border border-2 border-black"
+                                       id="q1">
+                            </label>
+                            <span class="d-none">true answer</span>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="col-ms-10 col-md-4">
+                asdads
+            </div>
         </div>
     </main>
 
-    <div th:replace="~{fragments/footers :: footer}"></div>
+    <footer th:fragment="footer" class="shadow rounded border-top border-black bg-secondary">
+        <div class="container-fluid">
+            <footer class="container bg-secondary">
+                <ul class="nav justify-content-center pb-3 mb-3">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link px-2 text-white fs-5">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link px-2 text-white fs-5">Features</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link px-2 text-white fs-5">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link px-2 text-white fs-5">FAQs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link px-2 text-white fs-5">About</a>
+                    </li>
+                </ul>
+                <p class="text-center text-white fs-5">© 2024 Company, Inc</p>
+            </footer>
+        </div>
+    </footer>
 </div>
 
-<div th:replace="~{fragments/scripts :: scripts}"></div>
+<div th:fragment="scripts">
+    <script
+            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+            crossorigin="anonymous"
+    ></script>
+    <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+            integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+            crossorigin="anonymous"
+    ></script>
+</div>
 </body>
 </html>
